      using readelf.
    + [ADB] Update the readelf version table parsing code to handle hidden
      symbols.
  
  * data/fields/perl-provides:
    + [FL] Data about Perl modules that are available both in Perl and as
      separate packages.
  * private/refresh-perl-provides:
    + [FL] Script to update data/fields/perl-provides.  By Niko Tyni.

  * frontend/lintian:
    + [RA] Ensure we close the pipe to lintian-info before exiting, since
      otherwise lintian-info may print the rest of our output after
      lintian exits, producing confusing output interleaved with the
      shell prompt.  (Closes: #496295)
    + [FL] Actually make package version available to output formatters.
      Currently used only by experimental colon-separated output.
    + [FL] Use new module Lintian::Schedule and make package architecture
      available to output formatters if possible.
      Currently used only by experimental colon-separated output.
  
  * lib/Tags/ColonSeparated.pm:
    + [FL] Update for new features and make a little bit easier to read
      for humans:
      - Update the format to include the new severity/certainty info.
      - Include information whether the tag is experimental.
      - Move the detailled override info to the end but include info
        flag about the override status in the same column that also
        includes the experimental flag info.
  * lib/Lintian/Schedule.pm:
    + [FL] Factor out some scheduling code.
  * lib/Lintian/Data.pm:
    + [FL] Extend Lintian::Data to handle key/value pairs.  Patch by
      Niko Tyni.
  
  * man/lintian.1:
    + [FL] Document udeb support in description for --packages-file.
  
  * t/runtests:
    + [FL] Copy the changes to testset/runtests from JP's branch.
    + [FL] Remove global tests that were duplicated from testset/runtests,
      which will not go away in the forseeable future.
    + [FL] Print a warning if no tests were run.  Based on a patch by
      Raphael Geissert.